ensure that follower count is viewable on small devices

--- a/src/client/components/Groups/View/scss/group-tile.scss
+++ b/src/client/components/Groups/View/scss/group-tile.scss
@@ -49,7 +49,8 @@
     max-width: 172px;
     max-height: 172px;
     @include gallery(1 of 2);
-    margin-bottom: gutter(5);
+    margin-bottom: gutter(10);
+    padding-bottom: 20px;
     padding-right: 0px;
     .coverimage {
       object-fit: cover;
